[package]
name = "so-priority-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
flume = "0.11.0"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["net", "rt-multi-thread", "macros", "io-util", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
